@@ -1,12 +1,16 @@
 package edu.fiuba.algo3.modelo;
 
+import edu.fiuba.algo3.modelo.Excepciones.JugadorNoSePuedeCrearConNombreVacioError;
 import edu.fiuba.algo3.modelo.Excepciones.NoSeEncuentraElMultiplicadorError;
 import edu.fiuba.algo3.modelo.Excepciones.YaHayUnMultiplicadorEnUsoError;
+import edu.fiuba.algo3.modelo.Multiplicadores.EstrategiaDeMultiplicacion;
 import edu.fiuba.algo3.modelo.Multiplicadores.MultiplicadorX2;
 import edu.fiuba.algo3.modelo.Multiplicadores.MultiplicadorX3;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class JugadorTest {
@@ -16,6 +20,12 @@ public class JugadorTest {
         var jugador = new Jugador(nombre, List.of(new MultiplicadorX2()));
 
         Assertions.assertEquals(nombre, jugador.obtenerNombre());
+    }
+
+    @Test
+    public void siJugadorSeCreaSinNombreLanzaExcepción() {
+        var nombre = "";
+        Assertions.assertThrows(JugadorNoSePuedeCrearConNombreVacioError.class, ()-> new Jugador(nombre, List.of(new MultiplicadorX2())));
     }
 
     @Test
@@ -38,7 +48,7 @@ public class JugadorTest {
 
     @Test
     public void actualizaPuntajeCorrectamenteCuandoSeUtilizaMultiplicadorPorDos() {
-        Jugador pepe = new Jugador("Pepe", List.of(new MultiplicadorX2()));
+        Jugador pepe = new Jugador("Pepe", new ArrayList<>(Arrays.asList(new MultiplicadorX2())));
         pepe.usarMultiplicador("MULTIPLICADOR_X_2");
 
         pepe.actualizarPuntaje(1);
@@ -49,7 +59,7 @@ public class JugadorTest {
 
     @Test
     public void SeLanzaYaHayUnMultiplicadorEnUsoErrorSiElJugadorYaEstaUsandoUnMultiplicador() {
-        Jugador pepe = new Jugador("Pepe", List.of(new MultiplicadorX2()));
+        Jugador pepe = new Jugador("Pepe", new ArrayList<>(Arrays.asList(new MultiplicadorX2())));
         String nombreDeMultiplcador = "MULTIPLICADOR_X_2";
 
         pepe.usarMultiplicador(nombreDeMultiplcador);
@@ -67,7 +77,7 @@ public class JugadorTest {
 
     @Test
     public void actualizaPuntajeCorrectamenteCuandoSeUtilizaMultiplicadorPorTres() {
-        Jugador pepe = new Jugador("Pepe", List.of(new MultiplicadorX3()));
+        Jugador pepe = new Jugador("Pepe", new ArrayList<EstrategiaDeMultiplicacion>(Arrays.asList(new MultiplicadorX3())));
         String nombreDeMultiplcador = "MULTIPLICADOR_X_3";
 
         pepe.usarMultiplicador(nombreDeMultiplcador);
@@ -76,4 +86,13 @@ public class JugadorTest {
         Assertions.assertEquals(3, pepe.obtenerPuntaje());
     }
 
+    @Test
+    public void elMultiplicadorSeEliminaDespuesDeUtilizarlo() {
+        Jugador pepe = new Jugador("Pepe", new ArrayList<>(Arrays.asList(new MultiplicadorX2())));
+        pepe.usarMultiplicador("MULTIPLICADOR_X_2");
+
+        pepe.actualizarPuntaje(1);
+
+        Assertions.assertThrows(NoSeEncuentraElMultiplicadorError.class, () -> pepe.usarMultiplicador("MULTIPLICADOR_X_2"));
+    }
 }
